# AutoBBS

./: .clangd  .gitignore  Dockerfile.premake4  INSTALL_PREMAKE4.md  MISSING_VENDOR_DIRECTORIES.md  NEXT_TASKS.md  PARALLEL_BUILD_GUIDE.md  README.md  README_BUILD.md  VENDOR_LIBRARIES_ANALYSIS.md  VENDOR_SOLUTION_SUMMARY.md  build-complete.sh  build-orchestrate.ps1  build-release.ps1  build-report.md  build.ps1  build.sh  docker-premake4.sh  fix_makefiles.sh  organize-release.ps1  premake4-minimal.lua  premake4.lua
PortfolioResult/: .classpath  .gitignore  MODELDATA_REFACTORING.md  QUICKSTART.md  README.md  pom.xml  portfolioOptimize2.config  portfolioOptimize4.config  portfolioOptimize5.config  portfolioOptimizeFactor2.config  portfolioOptimizeFactor4.config  portfolioOptimizeFactor5.config  portfolioOptimizePreset4.config  portfoliorisk2.config  portfoliorisk4.config  portfoliorisk5.config  run_multiple_seeds.sh  run_optimizer.sh  run_optimizer_with_viz.sh  run_portfolio.sh  test_deterministic_seed.sh  visualize_portfolio.py
asirikuy-trader/: atrader.py  ib_history.py  ib_streaming_test.py  (+2 more)
asirikuy_monitor/: .flake8  .gitignore  .pre-commit-config.yaml  API.md  DEPLOYMENT.md  README.md  checker.py  pyproject.toml  requirements-dev.txt  requirements.txt
asirikuy_monitor/config/: checker.config  checker.config.example  checker_MT4_Real.config
asirikuy_monitor/docs/: CHANGELOG.md  MIGRATION_GUIDE.md  NOTIFICATION_ALTERNATIVES.md  README.md  TELEGRAM_SETUP.md
asirikuy_monitor/include/: asirikuy.py  config_manager.py  email_security.py  logging_config.py  misc.py  platform_utils.py  process_manager.py  retry_mechanism.py  telegram_notifier.py  version.py
asirikuy_monitor/scripts/: README.md  asirikuy-monitor.service  install.sh  restart_monitor.ps1  run_monitor.ps1  run_monitor.sh  set_email_password.ps1  test_email_alert.ps1  test_heartbeat_error.ps1  uninstall.sh
asirikuy_monitor/specs/: MIGRATION_PROGRESS.md  NEXT_STEPS.md  PENDING_TASKS.md  PROJECT_STATUS.md  PYTHON2_ANALYSIS.md  RUNTIME_TEST_RESULTS.md  tasks.md
asirikuy_monitor/tests/: test_asirikuy.py  test_checker_integration.py  test_config_manager.py  test_email_security.py  test_logging_config.py  test_platform_utils.py  test_process_manager.py  test_retry_mechanism.py  test_runtime.py  test_security.py
asirikuy_monitor/tests/fixtures/: test_config.config
(+1173 files in other folders)
